
  * Added option to change order of songs in the track editor
  * Fixed bug restoring saved position and current track index in playlist
  * Added reload button in lyrics and last.fm panels
  * Allow filters in the new podcasts dialog
  * Now can select from a podcast directory "digitalpodcast.com" when adding a new podcast
  * Limited the length of the description in the podcast channel editor
  * Fixed bug when the file path had some chars for ex. %
  * Fixed bug loading tags from songs that didnt exist in library
  * Fixed loading saved radiostations playlists
  * Paint podcasts in playlist with length, author and channel
  * Progressbars in statusbar with labels
  * Fixed bug creating the podcast default dir
  * Fixed bug deleting old podcasts

2009-11-05 14:05:00
  * Fixed LyricWiki lyric search engine
  * Added support for Podcasts
  * Only allow to select one radiostation
  * Added support for musicbrainz searchs in Track Editor. Its Album
    oriented. Can search for tracks even when no metadata is not found
    using audio fingerprint. Leave empty artist and title fields for this.
  * Added partial support to gnome session. Now save playlist when session is ended
  * Added support for Discogs cover download. See www.discogs.com
  * Added cd universe lyric search
  * Fixed drop files after any element in the player playlist
  * Added option in Album list box to select a cover file from disk
  * Fixed the amazon cover download
  * In Player Playlist selection is cancelled when new playlist is set
  * Added support to ape file format.
  * Added support to mp4 using libmp4 library. Need libmp4v2 installed
  * Added column genre to songs list box
  * Added support to flac, ogg and mpc file formats.
  * TaskBar Icon is created/removed if enabled/disabled from preferences
  * Fixed bug in playlist not allowing to delete more than one track if the
    first track is selected
  * Albums list box will show the albums with the latest year only